fix: use match states to control visible panel

--- a/src/components/Battleship/Battleship.scss
+++ b/src/components/Battleship/Battleship.scss
@@ -354,15 +354,15 @@
   }
 
   .ship[type="destroyer"] {
-    background: url("./images/Destroyer.svg") no-repeat;
+    background: url("./images/destroyer.svg") no-repeat;
   }
   
   .ship[type="submarine"] {
-    background: url("./images/Submarine.svg") no-repeat;
+    background: url("./images/submarine.svg") no-repeat;
   }
   
   .ship[type="battleship"] {
-    background: url("./images/Battleship.svg") no-repeat;
+    background: url("./images/battleship.svg") no-repeat;
   }
 
   
